// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CombinedBar renders a single bar when benchmark value is less than current value 1`] = `
<React.Fragment>
  <ChartContext
    DropdownContext={[MockFunction]}
    TooltipContext={[MockFunction]}
    color="giant-leap"
    data={Object {}}
    label="Possitve"
    onDropdownClose={[MockFunction]}
    onDropdownOpen={[Function]}
    value={4321}
  >
    <Bar
      color="giant-leap"
      direction="right"
      fillMode="solid"
      isFaded={false}
      isHidden={false}
      labelStrong={false}
      minSize="1rem"
      onClick={[MockFunction]}
      percent={50}
    />
  </ChartContext>
</React.Fragment>
`;

exports[`CombinedBar renders an additional striped bar when benchmark value is grather than current value 1`] = `
<React.Fragment>
  <ChartContext
    DropdownContext={[MockFunction]}
    TooltipContext={[MockFunction]}
    color="giant-leap"
    data={Object {}}
    label="Possitve"
    onDropdownClose={[MockFunction]}
    onDropdownOpen={[Function]}
    value={4321}
  >
    <Bar
      color="giant-leap"
      direction="right"
      fillMode="solid"
      isFaded={false}
      isHidden={false}
      labelStrong={false}
      minSize="1rem"
      onClick={[MockFunction]}
      percent={10}
    />
  </ChartContext>
  <div
    className="ax-bar-chart__combined-bar-diff"
    style={
      Object {
        "left": "10%",
      }
    }
  >
    <ChartContext
      TooltipContext={[MockFunction]}
      color="giant-leap"
      data={Object {}}
      label="Possitve"
      value={-4271}
    >
      <Bar
        color="giant-leap"
        direction="right"
        fillMode="striped"
        isFaded={false}
        isHidden={false}
        labelStrong={false}
        minSize="1rem"
        percent={40}
      />
    </ChartContext>
  </div>
</React.Fragment>
`;
